assets/styles/components/Slice.scss
@import '../abstracts/variables.scss';

#Slice {
  .player-container {
    position: fixed;
    left: 0;
    bottom: 0;
    width: 100%;
    background-color: $color-blue-darker;
    border-top: 1px solid $color-blue-lighter;

    button {
      border-radius: 0;
      flex-grow: 1;

      &:not(:last-child) {
        border-right: 1px solid $color-blue-darker;
      }
    }

    .Volume {
      position: relative;
      margin-bottom: 0;
      width: 60px;

      input[type=range] {
        transform: rotate(270deg);
        position: absolute;
        width: 200px;
        left: -70px;
        height: 100%;
        top: -12px;
      }

      output {
        width: 100%;
      }
    }
  }
}

